@@ -1,4 +1,4 @@
-.TH VIFM 1 "November 27, 2016" "vifm 0.8.2"
+.TH VIFM 1 "December 06, 2016" "vifm 0.8.2"
 .\" ---------------------------------------------------------------------------
 .SH NAME
 .\" ---------------------------------------------------------------------------
@@ -3961,6 +3961,8 @@ are supported:
 .RS
 .IP \- 2
 %t \- file name (considering value of the 'classify' option)
+.IP \- 2
+%f - file name relative to current directory (considers 'classify')
 .IP \- 2
 %A \- file attributes (permissions on *nix or properties on Windows)
 %u \- user name or uid (if it cannot be resolved)
