@@ -1,4 +1,4 @@
-*vifm-app.txt*    For Vifm version 0.8.2  Last change: 2016 Nov 27
+*vifm-app.txt*    For Vifm version 0.8.2  Last change: 2016 Dec 06
 
  Email for bugs and suggestions: <xaizek@openmailbox.org>
 
@@ -3312,7 +3312,8 @@ default: ""
 Determines the content of the status line (the line right above command-line).
 Empty string means use same format like in previous versions.  Following macros
 are supported:
-    %t - file name (considering value of the 'classify' option)
+    %t - file name (considering value of the |vifm-'classify'| option)
+    %f - file name relative to current directory (considers 'classify')
     %A - file attributes (permissions on *nix or properties on Windows)
     %u - user name or uid (if it cannot be resolved)
     %g - group name or gid (if it cannot be resolved)
